// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`justifyContent Should parse (justify-around) correctly 1`] = `
Object {
  "justifyContent": "space-around",
}
`;

exports[`justifyContent Should parse (justify-between) correctly 1`] = `
Object {
  "justifyContent": "space-between",
}
`;

exports[`justifyContent Should parse (justify-center) correctly 1`] = `
Object {
  "justifyContent": "center",
}
`;

exports[`justifyContent Should parse (justify-end) correctly 1`] = `
Object {
  "justifyContent": "flex-end",
}
`;

exports[`justifyContent Should parse (justify-evenly) correctly 1`] = `
Object {
  "justifyContent": "space-evenly",
}
`;

exports[`justifyContent Should parse (justify-start) correctly 1`] = `
Object {
  "justifyContent": "flex-start",
}
`;
